--- a/vacations/vacations/TitileFrm.resx
+++ b/vacations/vacations/TitileFrm.resx
@@ -123,119 +123,75 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVGhD7ZYxSgQxFIbHwspCrDyBoHcQBG9gpdiIi1iL
-        XkDwEoqFaOUFbLXQtRZEBXErBTdhF3FnZ9vnbkyG2cxzJiHBZOH98BUhyc//h4F5CYlEwnV2+QoxIWOZ
-        CzMJiYxlLswkJDKWuTCTkMhY5sJMQiJjmQszCYmMZS51sc0HXrH1pAKYqQt1nuyFQffkJl9HXYA9M/ja
-        OQX2/v27HoZPF/chm9qA7vF1ft5LgZW1KyeUT9Gzt3wIWbIOvdUj4A8fkC4diHW6sAfs8TM/H20B3mxB
-        f35XhM5mtkrh1XkvBXyhe/LbN8imN0X4/lxDfFbF/egLjOhc3EM22wB+1yrtTUSBKqhALMhY5lIXsVdx
-        wdaTCmCmLtR50iihpBfA/q42KJ+iJ40SVdIL+EL3LI0ST+2x/egLjOicN4ejxLYoo+9NRIEqqEAsyFjm
-        UhexV3HB1pMKYKYu1HnSKKGkF8D+rjYon6InjRJV0gv4QvekUeIv/WeBKqhALMhY5sJMQiJjkUikMSXJ
-        D8NGEYnGF3llAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMjSURBVFhH7VdNaxRBEN34edGAon/AD5D8AK85GJLZ6Z6Z
+        zmJAjKgg5C7BgyLuQQTxIorgSQSF1TW73UnUgAT0EINEPCkSUUQh6iUJBIV8GHWs2q2NC1Mz2Z0ZD0oe
+        PFjYrvdqe6urqzNr+K9hjVib5XBunyh399rGuy6NM5E12RlZ8JY7TNdSdkB9FsZ7mtXqsjA52xly9vS9
+        6NtI4emhPd++QWqVldq7JwbUhwOm64c0yo8irFmC9W+l8W64g25bxs+0kFxySO2egt2YlQX1izOPYjV5
+        Z8rW6gjJxUaLKOV2CeMWOaM4FFpd7Swe3E76zQGTsY07Br/wJyceh/g3QlK3rJHeVrJpHLgzaSazwoJa
+        hsK/Rjaro+dez3ooYKgZRixFCu0cy+fz68g2HM5QtyU1FDAjkiZFWb22tNpNtjxgdzZViriJ0/To46g/
+        tzhX4flnF9g1LO+oZehlJ/J+xC7JEjQ96DOsQAjHPo37NVx8foldE8qyegLNNrzApckdrvYNJjiESRKi
+        U7ef7IOoXgd8cBgT7RBSq3NkH4Q03RNsUARTSGiU7IPoLKlpNoiIBYwJ1HN6fobS8f3J2TeB7wuTd1mt
+        GvFCJvsghJHfuaAa8SQ1i5fTr1itFRbUItkHAUdxkQ0i/o2EOnXXPNkHgdvHBdWIfQbrpJ74N9Vg3g0F
+        vj89dpbV+kP3PdkHAX1hnA8KJ9ZJDZgAtyaSWj0k+yBw0mODIpg0Ibho+8k+CBg5bGxWXGAYkyTUUVBf
+        wXMv2QeBM3B17OQFOCZJCO7N+3B/biH7IHAgxxm4mesD+wyeJOTqBVxH7S2Isnto1RHEKrptMH5MsSJp
+        clCNW0VrJ9lGAF4HOJCzIilSlDwb3Bp/iQjtXcEuyokloW3sb3CyzpBN4xAPxDaY6m7iDMwJxyGeKll2
+        T+KDk2yaAzzwtuJAzonHIe5M7GTqIQbdozgDx9otPE3wvMaXL8klBx5NHMgd4x0H4ceNNM9K04M+g0db
+        DssdIJPeU7qGSmK3rVYcO3HSw+FKGvmlMooabwEvSryb4HM/dmBseg09ddbw7yKT+Q1HZxyOhADi1wAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbWSURBVGhD7Zl7bFNVHMcLgjEY/1AS5eEYuABjoXdsbTdk
-        j653fdyt764FghMVAkRQmYKD8rAQxsDBBJehyGAtCJPwEGXteIi8hlFiIkogDoURUTAE42Abe8H6857L
-        ueP27qwbXWGY7Jt8kptzfuf08+vuq5mkN735n8RKUc+bZNLFJvnYb/Xy6OsaOdVsklPAoZCm4rLHMyYZ
-        9R4r2tQmLEIfR1UZZNR6oyJ2olIZ+RRe9likjyFeuoUk3SHjqEsmxVg5Xt+zYU+Zd4mSnaCJo2r1cmos
-        3qZnkqmIGWSSj6wnCXYFfdzYnxwOxxN4u0cf9tvPJ4mJWZolh/OFSlgxSdFuziiTmvF24YnLrn1uoZ1x
-        LbDpzjgd6lqngwHEoqyMDFzCxSWR9M0cR10RCwnhxWGXhuOfLTRMTooNrIunKvCW3c/CLEbrtGlv8NJC
-        FliZaqedme4yGAagWvbD4wJEBIjFhRxclBxQy95qW/VS6bOcQHeyIEuXlmNQNpPkA7Awf+TaM6QmuXSu
-        UAQRTJynpUwdsAZhjKcMWCO0zMvWPO3MYq4ShUmwTVgUsduEErbEWE6wpjQNzhUkthP/ZXUC3PKo4M4X
-        7RtgnyErsUpoYc/5HKJoEKapky4KJfgGzuQrYEN2VLsG1k0eAefXJJIbkFO7sEpoybXrTpEkEXmvMlC+
-        TA/XdhjhSH5m2/jcTLpOKME30BmkBtgn9I9YJbSwQjd5McTiiQxsmZsJZz/Rw12fEeDAfY4X6LmaOTbN
-        HaGENZHyk4TFEBuQUxexSmjhxYtmMfDd2kyo3xcoLQbVshe9XyjBKKhWkrAY4ikUS/2NVUIL3wBJlgRf
-        L5QwKEa2NO5QE6WF1JTSAesQmXKqDquEll3zko/yDdzczcDZoqR20mgMzaFjVFsye8JvwtdldOw0S6GZ
-        vU2SxBGowTczogJOPZYmo4yajlVCS4M7sg5doLxoEbqLCOQRaIxvDNU2lEXUGmWxSejPzzeQOjoKZtFj
-        4M62dFY4sJHmrTRMTYkG5bAhLW3yspi/2CdxItYIPa1lo1bCAUM76WCwa/LQWv342KGszPd8A/SYKKgp
-        TIZb65OhrjiVRQk316XA9YIkQPP3G5CeQi+DnEA40rDf0EISJYFq8TIu6AeKTjnrkDShECLHrITNs7O5
-        JoTkT50Jw2NWATV+hT8jZcb+mTJZf7w8PGFvlz+TZEncrTCcwcskStvB6FSrr1pp9cFoeREMifoA0lSF
-        N8QNJCauqkFz0QnFgGpTLeVVKcavR+Btuh//IVNiwz6jnyQspOFLtsarl6E1Sos3O4Hx3kVCCFn6dq6B
-        yBiX/8qyCU28/AUXUz8sOo+bU2jKuFoOw/6WVIvXxgmEI/4Kg4skLcTvMy5Ftaos7wQl42ttk+HwwkvS
-        gntNxH/U7Mu13dj5ztTrEdF5LWgsilojqMUw3laVw8t9IWGJv0JvB5+uvbyXAb/Xcu/bcrn6vWzdW99O
-        hmU8sxteHLkcho5aCtGmOaCYPwVSCs2gKskEerMe0osnA533NqjeWg9pWeXcmlTL3lsSCfTl9g5HYKME
-        oPQZgLLh90DH7BielqSZvflicSHJM9aCssgK6R5dcDZMBNXsIryufBnePrSYTjbFRCw5fHrAa+4754uH
-        tXJNCEBjaC5i0Tc/0K8fuSaW5rB5QbXUSZYNAr3ECSpr+WWs8mCxnL410FR526099m/rC+/7oM+kEpi9
-        akmAPAKNoblBCyrAdLIBMjZWQ9qUwwENhCLPo5yX04qVuh7zqfpx+sq6y+bKRkDIS6s4yf7ZbsgtmA9/
-        fjqYAx2jMTSncF/gahFGXw3Qs05w8mlzPiaKIcQh1SBot9aC1TqP9UT9YPOxxqu8DE/ksqOcKInhy48F
-        1CJMh2uBnnaEO59JUghxSDUIVamu2rHL8SRWDBKAPuyHnxLLcJxshLiSczAwZx/0e8XNMXDuVxC/6Tw3
-        R1qTsXM/UYhHHFIND+1mHNiy41gqmzJIIqGi27OCKMMjDqmGR+XRbceaHcdU2biNJBIq6h1vBEg8aIRr
-        0z3qKqzZcczHb1eRREJFvdUSIPGgEa5Nd+s6/3FjPny7liQSKuFsQLlJyT6VOwlJojtowngK0R7dr1iz
-        45AkugOzJy9AQow4pJo23NrPseaji9qjm0iUwYhDquGhPRo73vbRRfaZrD978f1OEkKIQ6pBKD26S117
-        kD2EqEt1NpIUQhxSDcdWXXj/V/CgYf8Ka4hiXcGtW4236bm4XK6+tEdbQBQMivZDtBZv0/NBb5XBrok2
-        UE1PnzYdBV3Y6MUMvdugezsrW4dAx/fGNHZUg8t705uHF4nkP2wyA97DlYaYAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWmSURBVGhD7ZltTFtVGMcxGk30gya+xQ9utLj68sUsZjFz
-        H3QuGZvAojLaZZkmviTsg/Hj9kUzjXHELJq5aWDI2kIZt7yOl0HZGJTxVkCgwNpye1rcm7r4yTnn1Au9
-        j+e597Rrb0/fIhSW8E/+6eWc5zzn95xzz+1tyFnTmta0dILCpx6UTbq9oZLc5gWjfk56W38LTHq447zX
-        WOjqk1ySa5SM66/FAsc6VKJzsvDVpZBJf5gHzPNCsd4fMum+kvfonmTDV1ayUf8JDzSVJdPTN2Wjrpil
-        WRnJu/M2S6b1CzzAdCyZ9IuyMTefpcu+KES/FipTS8XrrkLJC/ezlNkTlOS9xAPiuvR5gLKXAYTt6qem
-        XzblmVja7Clk1H2uBYlxNLSjKNZHNmvidVaWNnuiE8ffPsmgtY7ZidwJljZ7Uu7dTKG1ZjtBn0hXWNrs
-        iT5BbisF8MAysVKA/jZLmz2pW780BaBZ2uzpri5ArttQIH2U9/dSFYC5ZMGwk6VffkmC4RrUGQA+2xQD
-        U/7eBqigjm6LNrcfc9BcUo3hKku//FIKEGgB0SDUCFfxfuICEvbTXFktALcbi5DaCuQ4mAwtdeWHEF6u
-        M+xg6bOnhY4CkQeViTEHS5d9hRwFVTyoTBxyFFaydNmX3FW4nQeViTEHS7cyCnUWOXlg6Xixs2iApVk5
-        QXfhc5Jjx+88wGTGMbJj17MszcpK7t61FdoLb/BAeVbg6Rg2PE6HnM77LHb/NxY7+RqvWfPyCncCWrdw
-        gWN8egskW/nqhvl1FoEMUnhAmwUyZhVIHuteXkFFDoD1cYDGFwHatwJ0vaEar7EN+2gMC4+R5fSlR8x2
-        cshiI38iuK1FVKwUgm0C+fREw/zDLHx5pBSQhjG2pmb6oR/qA8/QW2UPBbdU2smt8Kq39Hlg6Mo4DFM3
-        93rUIqgxBmPNgmjCsZhDmXipxIPlGWMpkBQGQ1vrCTSe84JTnITRX8di7BQnoOGcT4mJHkN3ZkGZ+P9o
-        mpCNbjF4jDow65n6a364Eq53fwx/NL4OkvkJxXiNbdiHMRhbVUv+RYgGCt05PgOD8z/GgWs98NOEEotj
-        lALqyE2GkbmmxPlNU3OBAQoDiVz2/Rh8cXSU21fbrK7ihTTAtcYxOPbkKTHzn6KEkAfcYqB8/OJciAcW
-        NsK/+lanYl4RjR0BBaLXE3/LaN17uQ+OjR2P/H3eM6XugJ1k9kU4IYqP0cn7tTA8Hzlxp4Cy7+ILaDur
-        FtA1MR0DqzXC7216F7ZZ8+FbVoSDjsGxeKAZWmqN+XyPur2BOS1IIrumSaQAvNb29wwFFYiWfk8EFlcZ
-        gXnw+Bnua3GyJ1M92c/wkgsA7nH7SJcWIpkdA75IAY4Lvrj+EbdawKk2UYHC1Y0GTQSPrm1Vvx+q68hG
-        hphcbpHs0wKkstA+EylA6JiJ65+itjWxgxyYiANOBN9PY3FMld33W1qvGQ0A97p9waAWIJXLbZORAvCa
-        F9NxXi2gfWRWgevDIprfUcDRpsZ90HOpNwKPxlgcQ32cISbXpBjcxps8laOfQnjNixmcVA9yDX1lcP08
-        HlMEDx5jwq8XZiHwCkNMLvrIPMqbPJUPfjkUKeDg4SFuDNrequ4CPlnCoOEzEA2PxieWsvoCmcVzyRCT
-        i04yop00HZcecEYKKD3Qz41B97nYLjT5Yfhy4i81fDeyNfuVWGt9wMjwUsst+q/zJk5lY2lPpADT/h5u
-        TNiNZ9RdwBc3Hjw68lJHX7XTXn3U+MXgP7xJUzl/jyNSAF7zYsIenQlATYNaRIdLPdDR7ggfXPruUy34
-        DAxtdelkHdltsXtDCHrGNQOuX+ihpcaCsK3S5l2knyv7T8FUMtvFD8NFNPV4FSsrj20C+YCFrW5ZBXGn
-        xea9oYKrt43FLr7Juu8O4e9is93fRn+tteI1a+YoJ+c/YFP4yx31IkEAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAV+SURBVFhH7VdrbBRVFF5BBV+QaHwQDRhcEGfmblGiMdWw
+        dl+zFA1GbTEaEhMNmCbGHxoeKsWEGH8QJRgNQWh3t1ojC/xQlDa0u/duH1DUGITykBAJAbUKKGxbdmdm
+        nes5w53tllnLtlSaGL/mZDt3zr3nu+d177j+x38ax+i0idlWSdKoZ5HOlI0ZRr7NUHImzdxGHyO9ekL6
+        SWNyi848qzIJj8+k5C4ed40X00cPnHqvNpLKfJ0qW3VKjqeZlDMY4UNJL3P3ge5egynv97eW3SmWGh0A
+        kRWZlhl/pJuIWcz4UILeM5i8X0+RuWK5kYFz11WZhHxPjilbCw1giAxKWDap1Optitfs9NzG41XjOZVu
+        NNs8MzWmVGcZWQ/eOZBmJJsn1uzW9SR51dzruUGYGB6QDBjuTFPyl7VgEyxI5UbcKRoXakUBmxnH26Wp
+        WkpeaCTJN3lSdGY/5F6tucM9QaiWDj2hbMmTgZ1mqbL89A73JPG6JKCXOS27Gz1qhxvX0pPKEqHiMhkh
+        4LnF4tEJdH+OkaUDuyIa5NBK3i1dK1SGDbNt9q2wxja7GJAUVOqzOpMjuD7Ye06oOmFQT9jKE2ui2wD2
+        b47IxRfB7HJPgrz6tHCjF35n9pvN0s1CbTDQMBCI2+7FMuctcyaL15cF/t2cyUBok50GtkD4vhQqTmR3
+        yvdBiR5DxfNMOmukykKYB+L1iGDuevi6HFVeyTLlVCERlHQzMXMJpVqoOqEllefzTS8pt5kd994kXo0Y
+        SMig8mNYXVClPxYSwibb26rcLlSdAKX1+QmUvC2GRwUQsmv6Ug9M0annda2V/GIRSsmNMH69UHHCoMoe
+        m1AmJfnE8KjDPOKekKPyIpES48SwE4VxNncP4corBezGNiF0sRgeOxSePehWMTx2gL7zc95D0PLF8NgB
+        KqvDJoQdWwyPHQzmWWsT0pJkzeU2RUTFpspp/li4piKqNvmjwV/9UTXj3xg66YsGtwVi6lPeSOUdQtUJ
+        vBXaZwyc9t/DNeOflS8F2Ewgqlb764I/+COqAUR4Ecn469U9wWg4JGYNhkklt5FQjiChdLN03kiRBSP1
+        EpJ59GP1dBESDvFF1UO+urAkpg4ASx3yqM4+APHC3peaNUW8LhmB2ONTLc8UMV4oTzQ+yYOxsHgONsCf
+        8zZptpfJOpNOWl4CYhpVvjA7yod1pvljwZohwmTJM5ureLy7nq/pWM0DQKo8MjdbUR+uFEsMAEOkUfIC
+        ErJJwZHyEXx5TBQql4QvEmouRsIW9MrW7gg/cno3P3yqk9dsf9kah3mfiSWcABIf2gmOHVyj0rpMC5le
+        Sk7B4j228arN1Xw1W8mf/rzKekbPIJmjZ7r4vh7G3+t8hweiF8LmrVOPiyWcONcy6xadkYYLnzHCU/A5
+        k0uRty5VfVDW59EAGtpyAD2xizcfjfOar5bw7YcbLc/s66F8ZWI5DzVUWmQsiai9YoniMLsemgR3mQ12
+        +AQxTWezTsDX6cZskiywvk7hvo03Sy0hl8EmFi9oCGZsI2+0LuUHf2+3PLL/t5RFBv9Hz4Ri8wbIgPg2
+        BY8K00Mjl/K8CGQOlfLFilIb9+aNoAfQ+H4Ijx2mtbvetRK5kAyKrz6wQZgcGnyVa5zJZs+AZH8Jb5KF
+        t4Jiwr5+kM+LhfKG1Ib5fNnO13jXiSZem1wxOExCHomqZ6Gj3y9Mlga8TGEY9YRcDl19NRwvSSDZgwT7
+        qXIOwnUIrqXbDu6cs6wyFuguNIgeqY4vhDA5yaBAc/zAGym9kocNPA78kcDhYsYvlopIqN1fN3+6mPrv
+        wfdJWIKO3QBG80l+kfzpi4XX+RuvABkbeBxgB8amh32mfL3a54dq8tWrG7yR4OzBYXK5/gatttyrlhMz
+        OQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPiSURBVGhD7ZhdSFNhGMetoKDLPgi6d3YnEgURotNIa1PL
-        uTTrpohA7Jw+KHInYUURVjfSRZOIkgq9KO2Lua5KJIpCNOrCoqAvog9CK81yub09z/YcOXt91j5yZwv2
-        hx87nvd5/8//OefsMMzJKqusZk52u32+1WqtLykp6QKGCgsLx+BT6JSWlhZTaeYJgm+CkO+MgWWg5i6V
-        Z5Yg3HE5bDSKioqewyAn4HgJbU+vIEyzHDJOvhcXFzvIJj2CZ3oVBPktBYsb+I5MwhBlZGe+IESvHCpR
-        4A6+dTqdc8nSPEHj5Vwgjm3ONaK9uUy8umQLfcrrcCdrydY8wQBH5CBG9NCvL9uE8FVE0HmkPKIWvNrJ
-        1jxB42mPj/FKy6FlpDvRT7bmCZ9dY2juSsdCvxPwan1DtuYJGo9jcy5YIqAHepGteaLGbKhE0H3I1jz9
-        1wMEO3Jtu+tW/pypAdAr2GlZR/apl7/T8i7QkSdO7y+LCOPZlivaAOM5I9w6eqCX/6LlLdmnXjiA6LRE
-        BEEwXNv26ANEXQcvUwfA241D+G/YgtPCJIi/pyyA4YMdlnKyN0+/b9mecaESAT3IznwFfLZzXKhECPjs
-        Z8nOfAV77Gu5UImAHmSXHgW8FXe5YPEw6a3oI5v0Sdy2L/P7yke4gH8D9wR9lXlkk14Fb1daxU37Vy4o
-        Ryg87KHtmSG8E+L6ajZwBNdWi4y58rJEW44Q7YuFuJIvxE2rED3rw+AxnsM1qKHyzFNogDig8swTF5aD
-        yjNDDuVggUPVTm9UtBdPBrzvxetbQvQfDj/vF5eGwWM8B2tPHnrfYy3uwb1kY742qk0ralStDxA6+1pa
-        7wmDPnk84mNrK/0VFtYY9wB96EW2qVe5osyrUVyeqoYDASmIqGrQxr+Mjn3BoBj+aX5+CH2Ib6Ojw1gz
-        fR94gSd6U5vUaPM+96JqVeuVAxjxdFztxbCfz5+fGgCHQZ2BNW6PTrWi3a9TXan5n+mGxqaF0GRIbipT
-        u+fQm4mJicnJkZGpAfAYzgVwjdsjMVSz172A2s6YZtWoTT1MM5Y7D/of/RgYmBrgx+Bg6BxXy7JL82LP
-        cOsZkEN1bWUbRWGn1vJouKtraoDh7u7QOa42KsqhLdT+3+R0Ouc41KaXbJMo4Jfysdv9VR/g8dFj37gv
-        /d/AV63b7Z5NMZIXXP1SrkEsTu5s+KgPcGqH8oGriUW14vr3H3wORWvlzGNR2+j6PlhQIBA85mpigb0p
-        RvLCVxtnHg/tG+rHL1TVTXvvJ8A9ipG8qlQtqduP7Nh18APCrcUD9qYYyQuMfsnGJvKLYmSVVVascnL+
-        ANzVvDYs6PRTAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEcSURBVFhH7ZKxagJBEECnCUFSCgHBH7BIkcKPSJnKT1Gr
+        SyG3A6fFceyqWPklNhY2+YIUASF1IIR0GnfCnAFvQAvvJpJ98Jq7vZ3H7kHg8rHmCRx+VyLNOkoICmjg
+        8OHHP4HFFjjzDln0AZm546dKZHHdn8zL/ifN8BVccstvK2Y6vfKns9jH5FpcQppe86oKsTgrxPw651UV
+        YbEvRBza49UlMzaPftjmYHjRYbQFG3f4q5Jw5h5c9CkGiEZfPqrNX5+ZyaDhh6yLQ485eIMUm7zLmRiN
+        an7zVXHYqZpnSJIb3q1ExOFeNaQYUg0phlRDiiHVkGJINaQYMpBj466oGtJ1kWpIMaQaDlE0kCNdF6mG
+        FEOqIcWQgf8DwA6aUQtcSC8lFAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIwSURBVGhD7ZSxThRRGIVvQiP0voS7GO0sMKFg6awM4QnU
-        1gU7lVjLdkLrA1ig4XFACJUmPACNIZc5zLHwn9PsmeGXBE7yJbszc8//ze6dKfe5zw2nnh3W/wk1/KjS
-        TKjhR5VmQg0/qjQTavhRpZlQw48qzYQaflRpJtTwo0r/zMqNEWdRw08sBGrwUMRZ1PATC4EaPBRxFjX8
-        xEKgBg9FnEUNP7EwG2r4UaWZUMOPKs2EGn5UaSbU8KNK1cM3FHEWNfzEQqAGD0WcRQ0/sTAbavhRpZlQ
-        w48qVX/9UMRZ1PATC4EaPBRxFjX8xMJsqOFHlWZCDT+qVP3186J6FdTwo0qV0LyoXgU1/KjSTKjhR5Vm
-        Qg0/qjQTavhRpZlQw48qzYQaflRpLw7e1/pqXOvag5bXy82xD/raBmr4UaU2n1/W+rx5hSp2N+QaavhR
-        pRb45SG6ulDrdFLr/natew1v19pjOPf9Y2cdNfzEQhtsG0hC+Ounf8ExnMN2Cuuo4ScW2kya/Q5J/PLx
-        Bvbftecmi5111PATC23+3gC2TbyBL1vtufWlzjpq+ImFNtgekFRbaMot9OZxZx01/MRCG7wqIYkHFjeB
-        fyI+xD92Ouuo4ScW9gKvSogqZptyDTX8qNI+/H5a6sWzUi9XWvAZx9S1gBp+VGkfTsZFoq4F1PCjSvug
-        5IG6FlDj9uRa+FE5P10uGyej8uJ4XH7hGE/f/vwclW9HT8pDfi34jGP8etdSyhUJJX10dNY9iAAAAABJ
-        RU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFBSURBVFhH7Ze9SsRAEIBHFES76yws7wG09gHE8ooD8R18
+        hiji7SCmiLdZOfAJUvgCFja21lfba6FWKhpnvDl/cDgsbjOK+8FX5G/zkd1AAon/RcBa1QwthjVDi2ET
+        YwJWqmZo08WaocWwZgTXVU2M0aaLNUOLYc3QYlgztBjWDC2GNUOLYaNT4DKU7gLy7EUNmGS+8wgeB5Dn
+        CzLalCjcKpQ4VG86SY9n4A+WZJQpUtczNPAKPal79caavncDPm/LCJEIbou8VQM+6/eu4Gh/Ta6KCK+F
+        gLs0FQ/fIj68hr7rQNWdlasiM8gWaT2dKiEjj/EQzrM5ObshOIoXbMDn95ASn2hfBcX2vJzVML7XpkV+
+        KUEU5k7Ilhw1gN+8gOvQz+4obPgW+CsIuEluyFaiYUa/Ml9f42j+5Ps7BSX+NACvwsASa15jUAQAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
